added spotbugs (disabled for now)